--- a/chat.html
+++ b/chat.html
@@ -539,7 +539,7 @@
         - Puedes dar el link oficial del registro de instrucciones previas (RIP) y de las comunidades autónomas.
         - Puedes dar el link oficial del registro de donantes de médula ósea y cordón umbilical.
         - Puedes dar el link oficial del registro de donantes de sangre.
-        - Ofrece los link requeridos de manera que el usuario pueda acceder fácilmente a la información oficial dando un clic, ofrecela con un vinculo de da clic aqui y que los envie, nunca debes de poner todo el enlace.
+        - Ofrece los link requeridos de manera que el usuario pueda acceder fácilmente a la información oficial dando un clic. SIEMPRE debes mostrar los enlaces en formato HTML usando <a href="URL">da clic aquí</a> y NUNCA en formato Markdown ni mostrando la URL completa. El texto debe ser "da clic aquí" y el enlace debe ser clicable. No uses otro formato para los links.
         - Puedes dar el link oficial del registro de la tarjeta de donante de órganos y tejidos.
         - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro ya que todas las respuestas deben ser sobre la donación de órganos y tejidos en el contexto español.
         - En España, todas las personas son consideradas donantes salvo que hayan manifestado lo contrario. Pero siempre se consulta a la familia.
